# publicweb

./: .gitignore  README.md  index.html
avocado-library/: index.html
city-fold/: Cargo.toml  index.html
city-fold/pkg/: city_fold.d.ts  city_fold.js  city_fold_bg.wasm  city_fold_bg.wasm.d.ts  package.json
city-fold/src/: game.rs  lib.rs  math.rs  renderer.rs
cone-wars/: Cargo.toml  index.html
cone-wars/pkg/: cone_wars.d.ts  cone_wars.js  cone_wars_bg.wasm  cone_wars_bg.wasm.d.ts  package.json
cone-wars/src/: lib.rs
gemini-chat/: chat.py
height-game/: index.html  package.json
height-game/assets/: index-DZhuxJGF.js
height-game/src/: levels.ts  main.ts
lets-go/: README.md  index.html  package.json
lets-go/src/: ai.ts  games.ts  geo.ts  main.ts  styles.css
link-cleaner/: index.html
lotr-name-colab/: lotr_name_colab.py
lotr-names/: lotr_name_generator.ipynb
ring-shift-game/: index.html  package.json
ring-shift-game/scripts/: generate_image.py
ring-shift-game/src/: main.ts
sokoban/: index.html  package.json
sokoban/src/: levels.ts  main.ts
substack-reader/: index.html
three_body_sim/: index.html
travel-tunes/: index.html
volcano/: index.html
webroot/volcano/: index.html
webspeech/: index.html  main.js  style.css
yaml-slides/: index.html  package.json
yaml-slides/src/: main.ts  styles.css
