[package]
name = "city_fold"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "WebGlRenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "MouseEvent",
  "KeyboardEvent",
  "TouchEvent",
  "TouchList",
  "Touch",
  "console",
  "Performance",
  "HtmlElement",
  "Element",
  "Event",
  "EventTarget",
  "WheelEvent",
] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
